<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_a06p12"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/act3_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/act3_msg1"
        android:textAlignment="center"
        android:textColor="#000077"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campo_nome_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
         />

    <EditText
        android:id="@+id/campo_novo_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/act3_txtHint1"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/act3_bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:text="@string/act3_bt1" />

</LinearLayout>